crates/smart-config/tests/ui/derives/bogus_param_raw_name.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/derives/bogus_param_raw_name.rs:5:5
  |
5 |     r#поле: u64,
  |     ^^^^^^ the evaluated program panicked at 'Param name `поле` is invalid: name contains non-ASCII chars, first at position 0', $DIR/tests/ui/derives/bogus_param_raw_name.rs:5:5
